--- a/skims/static/translations.yaml
+++ b/skims/static/translations.yaml
@@ -84,3 +84,53 @@ utils.model.finding.enum.f011.threat:
 utils.model.finding.enum.f011.title:
   en: FIN.S.011. Use of software with known vulnerabilities
   es: FIN.S.011. Uso de componentes con vulnerabilidades conocidas
+
+###
+
+utils.model.finding.enum.f117.description:
+  en: >
+    Binary files usually have a file size greater than their source
+    counterpart, which can eventually affect a repository’s performance.
+    Changes done to them are often hard to track for versioning tools or make
+    no sense for a reviewer. Furthermore, security audits on binary files are
+    more complicated or simply not performed, and these could contain serious
+    vulnerabilities such as backdoors, rootkits and exposed sensitive
+    information.
+  es: >
+    Los archivos binarios generalmente tienen un tamaño de archivo mayor que
+    su contraparte de código fuente, lo cual eventualmente puede afectar el
+    rendimiento de un repositorio.
+    Los cambios que se realizan sobre ellos son difíciles de rastrear para
+    las herramientas de control de versiones o no tienen sentido para el
+    que los revisa.
+    Además, las auditorías de seguridad en archivos binarios son
+    más complicadas o simplemente no realizadas, y estos podrían contener
+    graves vulnerabilidades como puertas traseras, rootkits e información
+    sensible.
+utils.model.finding.enum.f117.impact:
+  en: >
+    Difficult the versioning and security auditing process.
+    Introduce vulnerabilities of previous versions in the repository.
+  es: |
+    Dificultar el proceso de versionamiento y auditoría de seguridad.
+    Introducir vulnerabilidades de versiones pasadas de archivos en el repositorio.
+utils.model.finding.enum.f117.recommendation:
+  en: >
+    Avoid including binary files in the source repository.
+  es: >
+    Evitar la inclusión de archivos binarios en el repositorio de código.
+utils.model.finding.enum.f117.requirements:
+  en: >
+    R323 Los archivos binarios y de otros tipos que a menudo no pueden ser
+    auditados por motivos de seguridad no deberían ser almacenados en el
+    repositorio de código.
+  es: >
+    R323. Exclude unverifiable files.
+utils.model.finding.enum.f117.threat:
+  en: >
+    Autenticated attacker from the Internet.
+  es: >
+    Atacante autenticado desde Internet.
+utils.model.finding.enum.f117.title:
+  en: FIN.S.117. Unverifiable files
+  es: FIN.S.117. Archivos no auditables
