skims\feat(back): #2294.107 unverifiable files
Former-commit-id: 77f90a45cbb1e9cae1dc6ea28111b259fe8af525

--- a/skims/static/translations.yaml
+++ b/skims/static/translations.yaml
@@ -87,6 +87,9 @@ utils.model.finding.enum.f011.title:
 
 ###
 
+src.lib_path.f117.unverifiable_files.description:
+  en: Unverifiable file in {path}
+  es: Archivo no verificable en {path}
 utils.model.finding.enum.f117.description:
   en: >
     Binary files usually have a file size greater than their source
