integrates\feat(front): #2270.27 mobile error boundary
- Added bugsnag error boundary into the mobile app


Former-commit-id: 98265b24c3b699ad83d881d4ded44aa68f78e3dc

--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,9 @@
   "homepage": "https://fluidattacks.com/integrates",
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
+    "@bugsnag/expo": "7.2.1",
+    "@bugsnag/core": "7.2.1",
+    "@bugsnag/plugin-react": "7.2.1",
     "@expo/vector-icons": "10.2.0",
     "@types/react-native": "0.62.18",
     "@types/react-router-native": "5.1.0",
