refac(build): #3575.1 rename break build
- Rename break build secrets to forces


Former-commit-id: f57a98a6820e3acbc1e44c2f0939916277ab2c0b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,8 +145,8 @@ asserts-static:
   script:
     - bash <(docker run fluidattacks/break-build
               --static
-              --id ${BREAK_BUILD_ID}
-              --secret ${BREAK_BUILD_SECRET}
+              --id ${FORCES_ID}
+              --secret ${FORCES_SECRET}
               --gitlab-docker-socket-binding
              )
   except:
