refac(build): #3575.2 missing vars
- Rename missed break build vars to forces


Former-commit-id: ee8ba1bc4a9dc9cf71149d74c5ce1ea43d6b4625

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -164,8 +164,8 @@ asserts-dynamic:
   script:
     - bash <(docker run fluidattacks/break-build
               --dynamic
-              --id ${BREAK_BUILD_ID}
-              --secret ${BREAK_BUILD_SECRET}
+              --id ${FORCES_ID}
+              --secret ${FORCES_SECRET}
               --gitlab-docker-socket-binding
              )
   only:
