refac(build): #503.3 remove var
- Use rockland instead of var


Former-commit-id: dc2513764518ccfd3f53d548547767507562cb37

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -451,7 +451,7 @@ test_forces_new:
     name: fluidattacks/forces:new
     entrypoint: [""]
   script:
-    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group "${INTEGRATES_GROUP}" -vv
+    - forces --token "${INTEGRATES_API_TOKEN}" --strict --group rockland -vv
   interruptible: true
   allow_failure: true
 
