skims\feat(conf): #2294.110 drestrepo skims approver
Former-commit-id: c7141c4ed113b0084909842f706579e2bed233d3

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -17,5 +17,5 @@
 /mobile/tslint.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
 
 /forces/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
-/skims/ @jrestrepoatfluid @kamadoatfluid
+/skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
 /sorts/ @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
