integrates\feat(front): #2270.30 mobile source maps
- Added mobile source maps into bugsnag


Former-commit-id: 93b536a87dc7e5e3d56d883942f30497a93cf241

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -20,6 +20,19 @@
     "experiments": {
       "redesignedLogBox": true
     },
+    "extra": {
+      "bugsnag": {
+        "apiKey": "c7b947a293ced0235cdd8edc8c09dad4"
+      }
+    },
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "@bugsnag/expo/hooks/post-publish.js",
+          "config": {}
+        }
+      ]
+    },
     "icon": "./assets/icon.png",
     "ios": {
       "bundleIdentifier": "com.fluidattacks.integrates",
