integrates\refac(front): #1719.44 split format_helpers
- Remove minToSec, secToMs unused functions.
- Move stlylizeBreadcrumItem function to Navbar utils.


Former-commit-id: ce5ca58bc26c11f0ab3619ba39915c3b9b0ecdd6

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -1,7 +1,9 @@
 # List of ignored files/dirs by the new linter
 
-src/resources/
-src/scenes/
+src/scenes/Login/
+src/scenes/Registration/
+src/scenes/Dashboard/**/*.*
+!src/scenes/Dashboard/**/utils.ts
 src/utils/formatHelpers.ts
 src/utils/*.tsx
 src/**/*.css.d.ts
