skims\perf(back): #2294.112 worker based resolving
- We have written like ten versions of materialized so far
  and still none of them is optimal
- Now that many products are using asyncio, we have copy pasted
  the same aio module in many places, and all of them have
  stale implementations that we've discovered can be improved
- I took some small wrappers over the standard library from the skims
  module and moved it to the aioextensions package. Also created
  'collect' and 'resolve' functions which are faster that all
  'materialize' versions we've written
- The aioextensions module have 100% coverage so it has good quality
  and prooved extremely low overhead (0 for coroutines of at least
  0.1 seconds duration), the executor pools can also be customized
  although they come in sensible defaults for our projects
- It also can be installed and updated by all products we create
  instead of copy-pasting the same knowledge over and over


Former-commit-id: 3743294fbf3050077bdec241146836a2c6222e04

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -38,6 +38,7 @@ repository = "https://gitlab.com/fluidattacks/integrates/-/tree/master/skims"
 version = "1.0.0"
 
 [tool.poetry.dependencies]
+aioextensions = "20.8.792051"
 aiofiles = "0.5.0"
 aiogqlc = "1.0.5"
 aiohttp = "3.6.2"
