--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -509,6 +509,16 @@ infra_django_db_test:
   <<: *in_dev_and_master_branch_integrates
   stage: test-infra
 
+infra_devicefarm_deploy:
+  <<: *with_nix
+  <<: *in_master_branch_integrates
+  stage: deploy-infra
+
+infra_devicefarm_test:
+  <<: *with_nix
+  <<: *in_dev_and_master_branch_integrates
+  stage: test-infra
+
 infra_resources_deploy:
   <<: *with_nix
   <<: *in_master_branch_integrates
