--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -61,6 +61,7 @@ pydeps = "1.9.4"
 pytest = "5.4.3"
 pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
+pytest-rerunfailures = "9.0"
 
 [tool.poetry.scripts]
 skims = 'cli:dispatch'
