reviews\feat(build): #2336.16 passed_pipeline_before_mr
- Add new attribute to all_pipelines_successful test
- The attribute verifies if an MR was opened
before the dev pipelined passed
- Add validator for new attribute


Former-commit-id: df2c89ef6f8367ebb0f257f9bd437a8e70ddf4be

--- a/reviews.toml
+++ b/reviews.toml
@@ -5,6 +5,7 @@ gitlab_url = 'https://gitlab.com'
 [tests.all_pipelines_successful]
 fail = true
 close_mr = true
+passed_first_pipeline_before_mr = true
 
 [tests.mr_message_syntax]
 fail = true
