reviews\refac(build): #2336.17 dal
- Add basic dal structure
- tests are still using gitlab object, abstraction layer
here is still missing
- Add identation for config


Former-commit-id: cab0f44a64088598e79231b131d0c88127f09096

--- a/reviews.toml
+++ b/reviews.toml
@@ -1,55 +1,57 @@
-gitlab_url = 'https://gitlab.com'
+endpoint_url = 'https://gitlab.com'
+platform = 'gitlab'
+job_name = 'reviews'
 
 [tests]
 
-[tests.all_pipelines_successful]
-fail = true
-close_mr = true
-passed_first_pipeline_before_mr = true
+  [tests.all_pipelines_successful]
+    fail = true
+    close_mr = true
+    passed_first_pipeline_before_mr = true
 
-[tests.mr_message_syntax]
-fail = true
-close_mr = true
+  [tests.mr_message_syntax]
+    fail = true
+    close_mr = true
 
-[tests.branch_equals_to_user]
-fail = true
-close_mr = true
+  [tests.branch_equals_to_user]
+    fail = true
+    close_mr = true
 
-[tests.mr_under_max_deltas]
-fail = true
-close_mr = true
-max_deltas = 200
-repo_path = '.'
+  [tests.mr_under_max_deltas]
+    fail = true
+    close_mr = true
+    max_deltas = 200
+    repo_path = '.'
 
-[tests.most_relevant_type]
-fail = true
-close_mr = true
-commit_regex = '^(?:all|forces|integrates|reviews|skims|sorts)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
-[tests.most_relevant_type.relevances]
-rever = 1
-feat = 2
-perf = 3
-fix = 4
-refac = 5
-test = 6
-style = 7
+  [tests.most_relevant_type]
+    fail = true
+    close_mr = true
+    commit_regex = '^(?:all|forces|integrates|reviews|skims|sorts)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
+    [tests.most_relevant_type.relevances]
+      rever = 1
+      feat = 2
+      perf = 3
+      fix = 4
+      refac = 5
+      test = 6
+      style = 7
 
-[tests.commits_user_syntax]
-fail = true
-close_mr = true
-user_regex = '^[A-Z][a-z]+ [A-Z][a-z]+$'
+  [tests.commits_user_syntax]
+    fail = true
+    close_mr = true
+    user_regex = '^[A-Z][a-z]+ [A-Z][a-z]+$'
 
-[tests.mr_user_syntax]
-fail = true
-close_mr = true
-user_regex = '^[A-Z][a-z]+ [A-Z][a-z]+$'
+  [tests.mr_user_syntax]
+    fail = true
+    close_mr = true
+    user_regex = '^[A-Z][a-z]+ [A-Z][a-z]+$'
 
-[tests.max_commits_per_mr]
-fail = false
-close_mr = false
-max_commits = 1
+  [tests.max_commits_per_mr]
+    fail = false
+    close_mr = false
+    max_commits = 1
 
-[tests.close_issue_directive]
-fail = false
-close_mr = false
-mr_title_regex = '^(?:all|forces|integrates|reviews|skims|sorts)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
+  [tests.close_issue_directive]
+    fail = false
+    close_mr = false
+    mr_title_regex = '^(?:all|forces|integrates|reviews|skims|sorts)\\(\w*)\((\w*)\):\s(#[1-9]\d*)(.\d+)?\s(.*)$'
