integrates\feat(cross): #2270.32 mobile build reporter
- Changed rollbar build info by bugsnag build info in deploy_mobile_ota
- Disabled build reporter from postPublish hook to avoid conflicts
with the one in deploy_mobile_ota
- Removed appVersion from bugsnagErrorBoundary since it is not
necessary right now and does not work well in review stage because it
is set in app.json


Former-commit-id: 767e2594408077689a8a29fb902c39534ee39623

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -29,7 +29,11 @@
       "postPublish": [
         {
           "file": "@bugsnag/expo/hooks/post-publish.js",
-          "config": {}
+          "config": {
+            "buildReporter": {
+              "disabled": true
+            }
+          }
         }
       ]
     },
