skims\feat(back): #2294.127 chdir option
- Since skims reports relative to its cwd, then let's give the
  option to chdir from the config itself as it's more confortable
  than cd'ing or pushd'ing manually


Former-commit-id: a0a34f8b84f8ab641961754969cc0044c1fc6217

--- a/skims/test/data/config/big.yaml
+++ b/skims/test/data/config/big.yaml
@@ -1,8 +1,12 @@
+chdir: ../
 group: worcester
 language: EN
 path:
   include:
-    - ../
+    - .
   exclude:
-    - glob(../**/.git/)
-    - glob(../**/node_modules/)
+    - skims/test/
+    - glob(**/.git/)
+    - glob(**/.venv/)
+    - glob(**/node_modules/)
+    - glob(**/*.pyc)
