skims\feat(back): #2294.131 python swallows exceptions
- edit codeowners


Former-commit-id: 58d4db9c76cc9872444a8f9e285b6f45a1932620

--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -17,5 +17,5 @@
 /mobile/tslint.json @mnorenaatfluid @kamadoatfluid @jrestrepoatfluid
 
 /forces/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
-/skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid
+/skims/ @drestrepoatfluid @jrestrepoatfluid @kamadoatfluid @mnorenaatfluid @ralvarezatfluid
 /sorts/ @jrestrepoatfluid @kamadoatfluid @acuberosatfluid
