skims\perf(back): #2294.133 load once and normalize paths
- Lock the functions that load the paths so high
  concurrency scenarios do not load them multiple times
- Normalize paths before feeding them to the include/exclude
  set so similar paths (. and ./ or ./. or '') are not counted
  multiple times
- Use strings instead of confuses' filenames as we do not need
  that extra overhead


Former-commit-id: 1d7cda30920e926adc82f1c8da9898012e99069a

--- a/skims/test/data/config/big.yaml
+++ b/skims/test/data/config/big.yaml
@@ -1,12 +1,12 @@
-chdir: ../
+chdir: ../../
 console_snippets: false
 group: worcester
 language: EN
 path:
   include:
-    - .
+    - product/
   exclude:
-    - skims/test/
+    - product/skims/test/
     - glob(**/.git/)
     - glob(**/.venv/)
     - glob(**/node_modules/)
