integrates\style(front): #1719.53 lint notifications file
Former-commit-id: 2167d62399a15dc9aad92dcf19b8e67dedfbdb88

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -4,6 +4,6 @@ src/scenes/Login/
 src/scenes/Registration/
 src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
-src/utils/*.tsx
+src/utils/index.spec.tsx
 src/**/*.css.d.ts
 src/**/*.d.ts
