--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -62,6 +62,8 @@ pytest = "5.4.3"
 pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
 pytest-rerunfailures = "9.0"
+sphinx = "3.2.0"
+sphinx-rtd-theme = "0.5.0"
 
 [tool.poetry.scripts]
 skims = 'cli:dispatch'
