integrates\feat(cross): #2270.33 back build reporter
- Removed rollbar build reporter from deploy_k8s_back
- Added bugsnag build reporter to fluidintegrates settings since
FI_VERSION does not match in fluidintegrates settings and
deploy_k8s_back


Former-commit-id: 611a9a805e7f91b938efb00a563d1045dd56b398

--- a/deploy/containers/app/Dockerfile
+++ b/deploy/containers/app/Dockerfile
@@ -93,13 +93,17 @@ RUN npm install -g secure-spreadsheet@0.1.0 \
 WORKDIR /usr/src/app
 
 ARG CI_API_V4_URL
+ARG CI_COMMIT_AUTHOR
 ARG CI_COMMIT_REF_NAME
+ARG CI_COMMIT_SHA
 ARG CI_PROJECT_ID
 ARG SSL_CERT
 ARG SSL_KEY
 ARG VERSION
 
+ENV CI_COMMIT_AUTHOR $CI_COMMIT_AUTHOR
 ENV CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME
+ENV CI_COMMIT_SHA $CI_COMMIT_SHA
 ENV FI_VERSION $VERSION
 
 # Put integrates in container
