--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,8 +50,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-paper": "4.0.1",
     "react-native-svg": "12.1.0",
-    "react-router-native": "5.2.0",
-    "rollbar": "2.19.1"
+    "react-router-native": "5.2.0"
   },
   "devDependencies": {
     "@apollo/react-testing": "3.1.4",
