integrates\refac(front): #1719.56 lint login component
Former-commit-id: 00c4358be48724118b29d5766975386ee7fec6cc

--- a/front/.eslintignore
+++ b/front/.eslintignore
@@ -1,6 +1,6 @@
 # List of ignored files/dirs by the new linter
 
-src/scenes/Login/
+src/scenes/Login/containers
 src/scenes/Registration/
 src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
