integrates\feat(cross): #2166 mobile e2e base
- next steps include:
- local support using nix
- figure out how to pass env variables to devicefarm
- zip and upload to devicefarm
- job to schedule a run and wait for results


Former-commit-id: 19471165de8163236c022e2fdc1e19efac96e194

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ mobile/*.key
 mobile/*.mobileprovision
 mobile/google-services.json
 mobile/output/*
+mobile/e2e/*.zip
 
 #coverage output
 front/.nyc_output
