--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -187,7 +187,7 @@ stages:
   artifacts:
     expire_in: 1 week
     paths:
-      - analytics
+      - integrates/analytics
     when: on_success
   stage: analytics
   tags: [autoscaling]
