integrates\fix(conf): #2302.5 update back path
Former-commit-id: f490fb19cebe61ae81a56e53b04651b6ea857f96

--- a/.gitignore
+++ b/.gitignore
@@ -86,11 +86,11 @@ django-apps/**/dist
 /TEMP_FD
 /test
 /test.py
-/test_async/dynamo_data/bb_executions.json.now
+/integrates/test_async/dynamo_data/bb_executions.json.now
 /version.txt
 /.coverage*
-/.DynamoDB
-/.tmp
+/integrates/.DynamoDB
+/integrates/.tmp
 
 # Reports
 *.xlsx
