integrates\fix(front): #2418 writing result to mobile store
- Changed the approach of modifying the response object by no propagate
the response with observer.next in expo app


Former-commit-id: 4867f47b2b79c9c1ba819013490ee6daa0f08b6e

--- a/integrates/mobile/package.json
+++ b/integrates/mobile/package.json
@@ -27,6 +27,7 @@
     "apollo-link-context": "1.0.20",
     "apollo-link-error": "1.1.13",
     "apollo-link-http": "1.5.17",
+    "apollo-link-http-common": "0.2.16",
     "babel-plugin-inline-import": "3.0.0",
     "expo": "38.0.9",
     "expo-app-auth": "9.1.1",
