integrates\refac(front): #1719.63 lint dashboard
- Lint types, queries and test files.


Former-commit-id: 6bef247213feca2628581a046b4e07cd89678739

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -2,6 +2,6 @@
 
 src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
-!src/scenes/Dashboard/index.tsx
+!src/scenes/Dashboard/*.*
 src/**/*.css.d.ts
 src/**/*.d.ts
