--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -220,12 +220,12 @@ integrates_analytics_make_snapshots_prod_schedule:
     refs: [schedules]
     variables: [$analytics]
 
-subscriptions_trigger_user_to_entity_report_dev:
+integrates_subscriptions_trigger_user_to_entity_report_dev:
   <<: *with_nix
   <<: *in_dev_branch_integrates
   stage: subscriptions
 
-subscriptions_trigger_user_to_entity_report_prod_schedule:
+integrates_subscriptions_trigger_user_to_entity_report_prod_schedule:
   <<: *with_nix
   interruptible: false
   stage: subscriptions
@@ -233,59 +233,59 @@ subscriptions_trigger_user_to_entity_report_prod_schedule:
     refs: [schedules]
     variables: [$subscriptions]
 
-.scheduler_prod_template: &scheduler_prod_template
+.integrates_scheduler_prod_template: &integrates_scheduler_prod_template
   <<: *with_nix
   interruptible: false
   stage: scheduler
-  image: "${CI_REGISTRY_IMAGE}/nix:scheduler_prod"
+  image: "${CI_REGISTRY_IMAGE}/nix:integrates_scheduler_prod"
   tags: [autoscaling-large]
   script:
-    - ./build.sh scheduler_prod "${CI_JOB_NAME/scheduler_/}"
+    - ./build.sh integrates_scheduler_prod "${CI_JOB_NAME/scheduler_/}"
 
 scheduler_delete_pending_projects:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$delete_pending_projects]
 
 scheduler_reset_expired_accepted_findings:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$reset_expired_accepted_findings]
 
 scheduler_update_indicators:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$update_indicators]
 
 scheduler_update_portfolios:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$update_portfolios]
 
 scheduler_get_new_releases:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$get_new_releases]
 
 scheduler_get_remediated_findings:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$get_remediated_findings]
 
 scheduler_get_new_vulnerabilities:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$get_new_vulnerabilities]
 
 scheduler_send_unsolved_to_all:
-  <<: *scheduler_prod_template
+  <<: *integrates_scheduler_prod_template
   only:
     refs: [schedules]
     variables: [$send_unsolved_to_all]
@@ -322,7 +322,7 @@ integrates_build_lambdas:
       - integrates/lambda/packages/
     when: on_success
 
-coverage_report:
+integrates_coverage_report:
   <<: *with_nix
   rules:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
@@ -340,7 +340,7 @@ coverage_report:
   stage: external
   retry: 1
 
-clean_registries:
+integrates_clean_registries:
   <<: *with_nix
   <<: *in_schedule_nightly_build_integrates
   stage: post-deploy
@@ -452,7 +452,7 @@ integrates_deploy_front:
 integrates_functional_tests_dev:
   <<: *with_nix
   <<: *in_dev_branch_integrates
-  image: "${CI_REGISTRY_IMAGE}/nix:functional_tests_dev"
+  image: "${CI_REGISTRY_IMAGE}/nix:integrates_functional_tests_dev"
   needs:
     - integrates_deploy_k8s_back_ephemeral
     - integrates_deploy_front
@@ -468,7 +468,7 @@ integrates_functional_tests_dev:
 integrates_functional_tests_prod:
   <<: *with_nix
   <<: *in_master_branch_integrates
-  image: "${CI_REGISTRY_IMAGE}/nix:functional_tests_prod"
+  image: "${CI_REGISTRY_IMAGE}/nix:integrates_functional_tests_prod"
   needs:
     - integrates_deploy_k8s_back
     - integrates_deploy_front
@@ -592,7 +592,7 @@ renew_certificates:
     name: "ephemeral/renew-ephemeral-cert"
     auto_stop_in: 1 hour
 
-rotate_jwt_token:
+integrates_rotate_jwt_token:
   <<: *with_nix
   <<: *in_schedule_nightly_build_integrates
   stage: rotation
