integrates\refac(front): #2101.2 migrate dashboard
Former-commit-id: c1cd1dbc779758474cae5ee55b2597d12161f115

--- a/integrates/front/.eslintignore
+++ b/integrates/front/.eslintignore
@@ -2,6 +2,7 @@
 
 src/scenes/Dashboard/**/*.*
 !src/scenes/Dashboard/**/utils.ts
+!src/scenes/Dashboard/**/hooks.ts
 !src/scenes/Dashboard/*.*
 src/**/*.css.d.ts
 src/**/*.d.ts
