--- a/skims/test/data/config/correct_no_persist.yaml
+++ b/skims/test/data/config/correct_no_persist.yaml
@@ -2,6 +2,6 @@ language: EN
 path:
   include:
     - glob(test/data/lib_path/*)
-    - src/
+    - skims/
   exclude:
-    - glob(src/**/*)
+    - glob(skims/**/*)
