--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -22,16 +22,16 @@ include = [
 license = "MPL-2.0"
 name = "skims"
 packages = [
-  { include = "cli", from = "src" },
-  { include = "config", from = "src" },
-  { include = "core", from = "src" },
-  { include = "integrates", from = "src" },
-  { include = "lib_path", from = "src" },
-  { include = "nvd", from = "src" },
-  { include = "parse_json", from = "src" },
-  { include = "state", from = "src" },
-  { include = "utils", from = "src" },
-  { include = "zone", from = "src" },
+  { include = "cli", from = "skims" },
+  { include = "config", from = "skims" },
+  { include = "core", from = "skims" },
+  { include = "integrates", from = "skims" },
+  { include = "lib_path", from = "skims" },
+  { include = "nvd", from = "skims" },
+  { include = "parse_json", from = "skims" },
+  { include = "state", from = "skims" },
+  { include = "utils", from = "skims" },
+  { include = "zone", from = "skims" },
 ]
 readme = "./README.md"
 repository = "https://gitlab.com/fluidattacks/integrates/-/tree/master/skims"
@@ -56,14 +56,13 @@ uvloop = "0.14.0"
 [tool.poetry.dev-dependencies]
 bandit = "1.6.2"
 mypy = "0.782"
+pdoc3 = "0.8.4"
 prospector = "1.3.0"
 pydeps = "1.9.4"
 pytest = "5.4.3"
 pytest-asyncio = "0.14.0"
 pytest-cov = "2.10.0"
 pytest-rerunfailures = "9.0"
-sphinx = "3.2.0"
-sphinx-rtd-theme = "0.5.0"
 
 [tool.poetry.scripts]
 skims = 'cli:dispatch'
