skims\feat(back): #2294.158 custom vuln db
- Let's use a locally curated list of CVEs. I took around 3000
  CVEs we've found and sorted them by popularity, this way
  we are going to report what is deterministical
- no-deltas-test


Former-commit-id: f16f5421445cbdb473987ec691cde0d454fdc68a

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -663,7 +663,7 @@ reviews:
 
 .skims_doc: &skims_doc
   <<: *with_nix
-  <<: *skims_in_dev_and_master_branch
+  <<: *skims_in_master_branch
   artifacts:
     paths: [public/]
   script:
