--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -51,6 +51,7 @@ pillow = "7.2.0"
 pyparsing = "2.4.7"
 python = "^3.8"
 ruamel-yaml = "0.16.10"
+semver = "2.10.2"
 uvloop = "0.14.0"
 
 [tool.poetry.dev-dependencies]
