integrates\feat(build): #2166.2 improve mobile e2e
- added local nix job to faster debugging
- added missing capabilities
- properly execute deeplink


Former-commit-id: 48499e02f0b33974933bb6ca7d316917a4dd7263

--- a/integrates/.gitignore
+++ b/integrates/.gitignore
@@ -13,6 +13,7 @@ mobile/npm-debug.*
 mobile/certs
 mobile/google-services.json
 mobile/output/*
+mobile/e2e/*.apk
 mobile/e2e/*.zip
 
 #coverage output
