--- a/integrates/front/package.json
+++ b/integrates/front/package.json
@@ -125,6 +125,7 @@
     "eslint": "7.3.1",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-fp": "2.3.0",
+    "eslint-plugin-import": "2.22.0",
     "eslint-plugin-jest": "23.17.1",
     "eslint-plugin-jest-formatting": "2.0.0",
     "eslint-plugin-jsx-a11y": "6.3.1",
