integrates\refac(front): #1719.66 rm useless path segments
Former-commit-id: e26fc16130b2560edf54f01bf41a9f5ae574aff0

--- a/integrates/front/.eslintrc.json
+++ b/integrates/front/.eslintrc.json
@@ -168,6 +168,7 @@
     "import/no-deprecated": "error",
     "import/no-named-as-default": "error",
     "import/no-self-import": "error",
+    "import/no-useless-path-segments": ["error", { "noUselessIndex": true }],
     "import/no-webpack-loader-syntax": "error",
     "jest/lowercase-name": [
       "error",
