skims\feat(back): #2294.164 more cves
Former-commit-id: 80165474c59e24ea88489a3de21bfa5548104e41

--- a/skims/pyproject.toml
+++ b/skims/pyproject.toml
@@ -9,7 +9,7 @@ authors = [
   "Product Team <development@fluidattacks.com>",
 ]
 classifiers = [
-  "Development Status :: 4 - Beta",
+  "Development Status :: 5 - Production/Stable",
   "Environment :: Console",
   "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
   "Topic :: Security",
